[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = "0.5.1"
anyhow = "1.0.94"
futures-util = "0.3.31"

tokio = { version = "1", features = ["full"] }

solana-client = "2.1.4"
solana-sdk = "2.1.4"
solana-transaction-status = "2.1.4"
solana-transaction-status-client-types = "2.1.4"
