[package]
name = "solana-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }

bs58 = "0.5.1"
anyhow = "1.0.94"
futures-util = "0.3.31"
tokio = { version = "1", features = ["full"] }

solana-client = "1.18.2"
solana-sdk = "1.18.2"
solana-transaction-status = "1.18.2"

anchor-lang = "0.30.1"
